[gd_scene load_steps=4 format=3 uid="uid://r5c43cdno8uh"]

[ext_resource type="Script" uid="uid://cao8prv6vlat3" path="res://Scripts/Dialogue System Scripts/base_interactable.gd" id="1_tn7xj"]
[ext_resource type="Texture2D" uid="uid://ddkxp2lfvnj8g" path="res://assets/indicator.PNG" id="2_bmah6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmah6"]

[node name="baseInteractable" type="Node2D"]
script = ExtResource("1_tn7xj")

[node name="interactionArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_bmah6")

[node name="Indicator" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, -27)
scale = Vector2(0.289063, 0.289063)
texture = ExtResource("2_bmah6")

[connection signal="body_entered" from="interactionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interactionArea" to="." method="_on_interaction_area_body_exited"]
